@@ -1,3 +1,7 @@
+2011-10-26  Takashi Kato  <ktakashi@ymail.com>
+
+	* src/library.c (rename_key): fixed rename import restriction.
+
 2011-10-21  Takashi Kato  <ktakashi@ymail.com>
 
 	* sitelib/util/list.scm: separated from (rfc http).
